--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,8 @@ label:focus-visible {
 .content,
 .content-wrapper {
   display: flex;
-  min-height: 100%;
+  min-height: 100vh;
+  width: 100%;
   padding-bottom: 2rem;
   padding-top: 2rem;
 }
@@ -149,7 +150,7 @@ input {
   display: none;
 }
 
-@media (min-width: 376px) {
+@media (min-width: 600px) {
   .content-wrapper {
     background-image: url("./images/bg-intro-mobile.png");
   }
@@ -163,7 +164,6 @@ input {
   .left,
   .right {
     margin: auto 0;
-    padding: 2rem;
   }
 
   .title {
@@ -185,3 +185,5 @@ input {
     font-size: 0.75rem;
   }
 }
+
+
